register_an_application has creation, modification and deletion and index.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,19 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import 'bootstrap/theme';
+
+.user-info {
+   margin-top: 9px;
+ }
+ 
+.nav {
+   margin-top: 5px;
+ }
+ 
+.alert-alert {
+  @extend .alert-warning;
+}
+
+.alert-notice {
+  @extend .alert-info;
+}
