--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,37 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.boxed {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px 10px 10px 5px;
+  width: 20%;
+}
+
+.posts {
+  margin-right: auto;
+  margin-left: auto;
+  padding: 5px 10px 10px 5px;
+  width: 20%;
+}
+.content {
+  width: 200px ;
+  margin-left: 600px ;
+  margin-right: 600px ;
+}
+
+h2, h3 {
+  color:green;
+  text-align: center;
+}
+
+.border-medium {
+  border: 3px solid green;
+  text-align: center;
+}
