--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
       </div>
       <section class="border-medium"> 
         Register Applications to track their events. View the events on registerd applications<br>
-        <%= link_to "Get Going", welcome_index_path, class: 'btn btn-primary btn-sm' %>
+        <%= link_to "Get Going", registered_applications_path, class: 'btn btn-primary btn-sm' %>
       </section>
     </div>
   </div>
