--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -2,7 +2,8 @@
   <div class="col-md-8">
     <div class = "col-md-8">
        <%= @registered_application.name %>
-        <%= @registered_application.url %>
+       <%= @registered_application.url %>
+       <h5> Eventcount = <%= @registered_application.events.count %> </h5>
    </div>
   </div>
 </div>
