associate_events_feed_back

--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -3,7 +3,7 @@
     <div class = "col-md-8">
        <%= @registered_application.name %>
        <%= @registered_application.url %>
-       <h5> Eventcount = <%= @registered_application.events.count %> </h5>
+       <h5> Eventcount = <%= @events.count %> </h5>
    </div>
   </div>
 </div>
