--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -3,7 +3,10 @@
     <div class = "col-md-8">
        <%= @registered_application.name %>
        <%= @registered_application.url %>
-       <h5> Eventcount = <%= @events.count %> </h5>
+       <% @events.each do |event| %>
+         <h5> Event_type = <%= event[0] %> </h5>
+         <h5> Event_type_count = <%= @events.count(event) %> </h5>
+       <% end %>
    </div>
   </div>
 </div>
