--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,9 +2,21 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .boxed {
-  width: 60%;
+  border: 20px solid #191970 ;
+  width: 800px;
+  height: 650px;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
+  vertical-align: middle;
+  top: 50%;
+  color: white;
+  background-color: #708090;
+  border-radius:20px;
+}
+
+table, th, td,tr {
+    border: 1px solid black;
 }
 
 section {
