--- a/app/views/registered_applications/edit.html.erb
+++ b/app/views/registered_applications/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Edit RegisteredApplication </h1>
+<div style="width:650px; height:350px; margin-left:150px;background-color:#708090; border: 1px solid #191970; color:black">
+<h3>Edit RegisteredApplication </h3>
 <div class = "row">
    <div class = "col-md-8">
       <%= form_for @registered_application do |f| %>
@@ -25,4 +26,5 @@
         </div>
       <% end %>
    </div>
+</div>
 </div>
