--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -1,3 +1,4 @@
+<div style="width:650px; height:350px; margin-left:150px;background-color:#708090; border: 1px solid #191970; color:white">
 <div class="row">
   <div class="col-md-8">
     <div class = "col-md-8">
@@ -9,4 +10,5 @@
        <% end %>
    </div>
   </div>
+</div>
 </div>
