about postgresql and other look and feel

--- a/app/views/registered_applications/_form.html.erb
+++ b/app/views/registered_applications/_form.html.erb
@@ -19,6 +19,6 @@
   <% end %>
   </p>
   <div class="form-group">
-    <%= f.submit "Save", class: 'btn btn-success' %>
+    <%= f.submit "Save", class: 'btn btn-primary' %>
   </div>
 <% end %>
