--- a/app/views/registered_applications/index.html.erb
+++ b/app/views/registered_applications/index.html.erb
@@ -1,6 +1,9 @@
 <ul class="nav navbar-nav pull-left">
   
-<div style="width:800px; height:600px; margin-left:150px;background-color:#708090; border: 3px solid #191970; color:white">
+<div style="width:800px; height:700px; margin-left:150px;background-color:#708090; border: 3px solid #191970; color:white">
+
+<%= render "devise/shared/project_name"%>
+<%= render "devise/shared/logged_in", style:'color:white;' %>
 <h4>My RegisteredApplications</h4>
 <table style="width:50%; color:white; border: 5px solid black">
   <tr>
