--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <div style="width:600px; height:500px; margin-left:150px;background-color:#708090; border: 3px solid #191970; color:white">
 
+<%= render "devise/shared/project_name"%>
 <h2>Sign Up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -31,5 +32,5 @@
   <%= f.submit "Sign up", class: 'btn btn-primary' %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%#= render "devise/shared/links" %>
 </div>
