--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,6 +1,6 @@
 
 <%- if controller_name != 'sessions' %>
-   <%= link_to "Log in", new_session_path(resource_name),:style=>'color: white;' %><br />
+   <%= link_to "Sign in", new_session_path(resource_name),:style=>'color: white;' %><br />
 <% end -%>
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to "Sign up", new_registration_path(resource_name), :style=>'color: white;' %><br />
