--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blocmetrics</title>
+  <title>Analetrics</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    "application", media: "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+  <%= javascript_include_tag "application", "chartkick" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -12,23 +13,6 @@
   <nav class="navbar navbar">
     <div class="container">
       <div id="navbar">
-        <ul class="nav navbar-nav pull-right">
-          <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-          <% if user_signed_in? %>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                <%= current_user.name %>
-                <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu" role="menu">
-                <li><%= link_to 'Signout', destroy_user_session_path, method: :delete %></li>
-              </ul>
-            </li>
-          <% else %>
-            <%= link_to 'Sign In', new_user_session_path,  class: 'btn btn-primary btn-md' %>
-          <% end %>
-          
-        </ul>
       </div>
     </div>
   </nav>
